src/tests/snapshots/funky__tests__wasm__br_table.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module_instance: ModuleInstance {
        fn_types: [
            FunctionSignature {
                param_types: [
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
        ],
        func_addrs: [
            FuncAddr(
                0,
            ),
        ],
        table_addrs: [],
        mem_addrs: [],
        global_addrs: [],
        exports: [
            ExportInstance {
                name: "multiple",
                value: Function {
                    ty: 0,
                },
            },
            ExportInstance {
                name: "br_table",
                value: Function {
                    ty: 0,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 17,
                            instruction: OP_BLOCK(
                                Empty,
                                CodeBlock {
                                    id: 5,
                                    instructions: [
                                        InstructionWrapper {
                                            instruction_id: 14,
                                            instruction: OP_BLOCK(
                                                Empty,
                                                CodeBlock {
                                                    id: 4,
                                                    instructions: [
                                                        InstructionWrapper {
                                                            instruction_id: 11,
                                                            instruction: OP_BLOCK(
                                                                Empty,
                                                                CodeBlock {
                                                                    id: 3,
                                                                    instructions: [
                                                                        InstructionWrapper {
                                                                            instruction_id: 8,
                                                                            instruction: OP_BLOCK(
                                                                                Empty,
                                                                                CodeBlock {
                                                                                    id: 2,
                                                                                    instructions: [
                                                                                        InstructionWrapper {
                                                                                            instruction_id: 5,
                                                                                            instruction: OP_BLOCK(
                                                                                                Empty,
                                                                                                CodeBlock {
                                                                                                    id: 1,
                                                                                                    instructions: [
                                                                                                        InstructionWrapper {
                                                                                                            instruction_id: 1,
                                                                                                            instruction: OP_LOCAL_GET(
                                                                                                                0,
                                                                                                            ),
                                                                                                        },
                                                                                                        InstructionWrapper {
                                                                                                            instruction_id: 2,
                                                                                                            instruction: OP_BR_TABLE(
                                                                                                                [
                                                                                                                    3,
                                                                                                                    2,
                                                                                                                    1,
                                                                                                                    0,
                                                                                                                ],
                                                                                                                4,
                                                                                                            ),
                                                                                                        },
                                                                                                        InstructionWrapper {
                                                                                                            instruction_id: 3,
                                                                                                            instruction: OP_I32_CONST(
                                                                                                                99,
                                                                                                            ),
                                                                                                        },
                                                                                                        InstructionWrapper {
                                                                                                            instruction_id: 4,
                                                                                                            instruction: OP_RETURN,
                                                                                                        },
                                                                                                    ],
                                                                                                },
                                                                                            ),
                                                                                        },
                                                                                        InstructionWrapper {
                                                                                            instruction_id: 6,
                                                                                            instruction: OP_I32_CONST(
                                                                                                100,
                                                                                            ),
                                                                                        },
                                                                                        InstructionWrapper {
                                                                                            instruction_id: 7,
                                                                                            instruction: OP_RETURN,
                                                                                        },
                                                                                    ],
                                                                                },
                                                                            ),
                                                                        },
                                                                        InstructionWrapper {
                                                                            instruction_id: 9,
                                                                            instruction: OP_I32_CONST(
                                                                                101,
                                                                            ),
                                                                        },
                                                                        InstructionWrapper {
                                                                            instruction_id: 10,
                                                                            instruction: OP_RETURN,
                                                                        },
                                                                    ],
                                                                },
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 12,
                                                            instruction: OP_I32_CONST(
                                                                102,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 13,
                                                            instruction: OP_RETURN,
                                                        },
                                                    ],
                                                },
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 15,
                                            instruction: OP_I32_CONST(
                                                103,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 16,
                                            instruction: OP_RETURN,
                                        },
                                    ],
                                },
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 18,
                            instruction: OP_I32_CONST(
                                104,
                            ),
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        0,
    ),
}
