src/tests/snapshots/funky__tests__wasm__global.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module: ModuleInstance {
        code: [],
        fn_types: [],
        func_addrs: [],
        table_addrs: [],
        mem_addrs: [],
        global_addrs: [
            GlobalAddr(
                0,
            ),
        ],
        exports: [
            ExportInstance {
                name: "e",
                value: Global {
                    ty: 0,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [],
        tables: [],
        memory: [],
        stack: [],
        globals: [
            Variable {
                mutable: false,
                val: I32(
                    42,
                ),
            },
        ],
    },
    debugger: RelativeProgramCounter(
        0,
    ),
}
