src/tests/snapshots/funky__tests__wasm__gt.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: ModuleInstance {
        start: 0,
        code: [
            FunctionBody {
                locals: [],
                code: [
                    OP_LOCAL_GET(
                        0,
                    ),
                    OP_LOCAL_GET(
                        1,
                    ),
                    OP_I32_GT_U,
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [
                    I32,
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
        ],
        funcaddrs: [
            0,
        ],
        tableaddrs: [],
        memaddrs: [],
        globaladdrs: [],
        exports: [
            ExportInstance {
                name: "gt",
                value: Function {
                    ty: 0,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        OP_LOCAL_GET(
                            0,
                        ),
                        OP_LOCAL_GET(
                            1,
                        ),
                        OP_I32_GT_U,
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        globals: [],
    },
}
